src/tests/testfiles/function-declarations/14.txt
Error at 1:15: ‘void’ must be the only parameter
int foiejfoja(void, void *aaaa);
              ^
